--- a/components/Title/Title.module.scss
+++ b/components/Title/Title.module.scss
@@ -15,33 +15,36 @@
     top: 50px;
 }
 
-.title2 {
-    //position: absolute;
-    padding: 100px 0 0 0;
-    z-index: 5;
-    font-size: 18px;
+// .title2 {
+//     //position: absolute;
+//     padding: 100px 0 0 0;
+//     z-index: 5;
+//     font-size: 18px;
 
-    position: relative;
-    //width: 100%;
-    height: 70px;
-    left: 5px;
+//     position: relative;
+//     //width: 100%;
+//     height: 70px;
+//     left: 5px;
     
-    //bottom: 30px;
+//     //bottom: 30px;
     
-    // font-family: Enriqueta;
-    // font-style: normal;
-    // font-weight: 600; 
-    // font-size: 40px;
-    // line-height: 54px;
+//     // font-family: Enriqueta;
+//     // font-style: normal;
+//     // font-weight: 600; 
+//     // font-size: 40px;
+//     // line-height: 54px;
 
-    color: #202030;
-}
+//     color: #202030;
+// }
 .container {
     display: flex;
     // display: grid;
     // align-items: center;
     // width: 100%;
     //position: relative;
+    margin-top: -50px;
+        margin-bottom: 30px;
+        padding:0px;
 }
 
 .underline {
@@ -50,32 +53,35 @@
     width:500px;
     background-color: $misty-pink;
     margin-top: -25px;
+    left: 19%;
 }
 
 .title {
     position: absolute;
     padding: 100px 0 0 0;
-    z-index: 5;
+    //z-index: 5;
     font-size: 18px;
+    left: 20%;
 }
 
 @media only screen and (min-width: 993px) {
-    .container {
-        margin-top: -50px;
-        margin-bottom: 30px;
-        padding:0px;
-    }
-    .underline {
-        width: 500px;
-        left: 19%;
-    }
-    .title {
-        left: 20%;
-    }
+    // .container {
+    //     margin-top: -50px;
+    //     margin-bottom: 30px;
+    //     padding:0px;
+    // }
+    // .underline {
+    //     width: 500px;
+    // }
+    
 }
 @media only screen and (max-width: 992px){
-
+    .underline{
+        width:70%;
+    }
 }
+
+//messes up underline and title so they dont overlap
 
 // @media only screen and (max-width: 992px) {
 //     .container {
